TFP-7093 mer robust deteksjon av første realindring. Utkast